# verixa

./: .gitignore  README.md  dataguard.yaml  implementation_plan.md  project_structure.md  pyproject.toml  v2.md  verixa.risk.yaml.example  verixa.targets.yaml.example  verixa.yaml  workflow.md
.dataguard/: baseline.json
.github/workflows/: dataguard-check.yml  verixa-check.yml
.verixa/: baseline.json
examples/mock_data/: stripe_transactions.jsonl
scripts/: setup_mock_bigquery.py  setup_mock_snowflake.py
src/dataguard/: __init__.py  __main__.py
src/verixa/: __init__.py  __main__.py  runtime_impact.py  targeting.py
tests/cli/: support.py  test_baseline_commands.py  test_check_command.py  test_check_runtime.py  test_check_warning_behavior.py  test_init_command.py  test_suppressions.py  test_verixa_commands.py
tests/integration/: test_live_bigquery_smoke.py  test_live_snowflake_smoke.py
tests/unit/: extensions_demo.py  test_accepted_values.py  test_baseline_manager.py  test_bigquery_connector.py  test_bigquery_queries.py  test_bigquery_types.py  test_config_loader.py  test_contract_normalize.py  test_cost_command.py  test_diff_engine.py  test_doctor_command.py  test_finding_schema.py  test_freshness.py  test_github_annotations.py  test_github_markdown.py  test_history.py  test_no_nulls.py  test_null_rate_change.py  test_numeric_distribution_change.py  test_plan_command.py  test_policy_export.py  test_risk_config.py  test_row_count_change.py  test_schema_drift.py  test_snapshot_command.py  test_snapshot_service.py  test_snapshot_storage.py  test_support.py  (+6 more)
(+97 files in other folders)
