[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verixa"
version = "0.1.0"
description = "Developer-first Data CI for warehouse source contracts"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "typer>=0.12,<1.0",
  "PyYAML>=6.0,<7.0",
  "google-cloud-bigquery>=3.18,<4.0",
  "snowflake-connector-python>=3.14,<4.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
]

[project.scripts]
verixa = "verixa.cli.app:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
